# xp-dag-mesh

./: ARCHITECTURE.md  Cargo.toml  README.md  install.sh
desktop/: .gitignore  README.md  package.json  vite.config.ts
desktop/src/: index.html  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  node.rs  sync.rs  validator.rs  wallet.rs
src/: lib.rs
