[package]
name = "xp-dag-mesh"
version = "0.1.0"
edition = "2021"
description = "Physics-anchored DAG Layer 1 protocol with entropy-weighted consensus"
license = "MIT"
repository = "https://github.com/00ranman/xp-dag-mesh"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
libp2p = "0.50"
sha3 = "0.10"

[workspace]
members = [
    "dag_core",
    "validator_mesh", 
    "p2p_sync",
    "common"
]

[lib]
name = "xp_dag_mesh"
path = "src/lib.rs"